--- a/package.json
+++ b/package.json
@@ -11,15 +11,28 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.0",
+    "@angular/cdk": "^13.1.1",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
+    "@angular/google-maps": "^13.1.3",
+    "@angular/material": "^13.1.1",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@googlemaps/js-api-loader": "^1.13.2",
+    "@types/slick-carousel": "^1.6.37",
+    "angular-slick-carousel": "^3.1.7",
+    "bootstrap": "^3.4.1",
+    "jquery": "^3.6.0",
+    "ng-zorro-antd": "^13.0.0",
+    "ngx-owl-carousel-o": "^7.0.1",
+    "notosans-fontface": "^1.2.4",
     "rxjs": "~7.4.0",
-    "tslib": "^2.3.0",
+    "slick-carousel": "^1.8.1",
+    "tslib": "^2.3.1",
+    "typeface-archivo": "^1.1.13",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
